# seva-sarathi

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/hooks/: useUser.ts
client/src/lib/: api.ts
client/src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx
python-server/: Dockerfile  docker-compose.yml  pyproject.toml  server.py
python-server/.gmail-mcp/: gcp-oauth.keys.json
python-server/services/: agno_playwright.py  auth.py  db.py  drive-server.py  drive.py  government.py  mcps.py  rag.py  schema.py
server/: drizzle.config.ts  package.json  tsconfig.json
server/public/: index.html
server/public/assets/: index-B6mZRQF2.css  index-BKxp0fUQ.js  index-BaSdlUnN.js  index-C3cNjZjN.css  index-CP5rQ3Tu.js  index-CfYqdHRA.js  index-DC0YGr3l.js  index-DI6cvHUQ.js  index-DtmzQS3Q.css  index-DzhlFHEN.css  index-RTc3GZGS.js  index-gVXX5wgE.css
server/src/: app.ts  index.ts
server/src/database/: db.ts
server/src/database/schema/: user.schema.ts
server/src/middlewares/: requestLogger.ts
server/src/routes/: ai.route.ts  auth.route.ts
server/src/utils/: env.parser.ts  pino.config.ts
server/src/zodSchemas/: ai.ts
server/supabase/: client.ts
server/supabase/migrations/: 0000_tiny_pet_avengers.sql  0000_uneven_marrow.sql
server/supabase/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
server/types/: express.d.ts
